--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -43,7 +43,7 @@
 
                     <h5>6. Contact Us</h5>
                     <p>
-                        If you have any questions about this Privacy Policy, feel free to contact us via the <a asp-controller="Home" asp-action="Contact">Contact</a> page.
+                        If you have any questions about this Privacy Policy, feel free to contact us via the <a asp-controller="AdminContacts" asp-action="Create">Contact</a> page.
                     </p>
 
                     <div class="text-end mt-4">
