Add-Comment(not complete)

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -147,6 +147,12 @@
                                 </a>
                             </li>
 
+                            <li class="nav-item">
+                                <a class="nav-link" style="color: black;" asp-controller="Comments" asp-action="Index">
+                                    <i class="fas fa-user me-1"></i>Profile
+                                </a>
+                            </li>
+
                         }
 
                         @* Add every Seller accessible nav here *@
